--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-react-hmre": "^1.1.1",
+    "chai": "^3.5.0",
     "express": "^4.14.0",
+    "mocha": "^3.1.2",
     "redux-mock-store": "^1.2.1",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
