adjust for production

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --compilers js:babel-register --recursive -w test/",
-    "build": "NODE_ENV=production webpack --config webpack.config.prod.js"
+    "build": "NODE_ENV=production webpack --config webpack.config.prod.js",
+    "dev": "node server.js"
   },
   "author": "",
   "license": "ISC",
